--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <ol>
 
-                    <li>In a full-stack bootcamp, you learn which of the following:</li>
+                    <!-- <li>In a full-stack bootcamp, you learn which of the following:</li>
 
                     <input type="radio" name="option" /> : Back-End<br />
                     <input type="radio" name="option" /> : Front-End<br />
@@ -70,7 +70,7 @@
                     <input type="radio" name="pet" /> : Bird<br />
                     <input type="radio" name="pet" /> : Fish<br />
 
-                    </br>
+                    </br> -->
 
                 </ol>
 
